<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/save_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/save_location"
                tools:ignore="SmallSp" />
            <Button
                android:id="@+id/stop_navigation__button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/stop"
                tools:ignore="SmallSp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/current_location_button"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_mylocation"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                tools:ignore="ButtonStyle,NestedWeights" />
            <Button
                android:id="@+id/save_track_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/save_path"
                tools:ignore="SmallSp" />
        </LinearLayout>

    </LinearLayout>

</merge>