<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/point_manager_layout"
                    android:layout_width="180dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/landmark_rounded_ic"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/point_manager"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/track_manager_layout"
                    android:layout_width="180dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/track_manager_ic"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/track_manager"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/landmark_manager_layout"
                    android:layout_width="180dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/instrumentation_ic"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/measurements" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/places_layout"
                    android:layout_width="180dp"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/search_ic"
                        tools:ignore="ContentDescription" />
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/search_place" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>